--- a/To-Do/To-Do/Screens/TaskDetail/TaskDetail.storyboard
+++ b/To-Do/To-Do/Screens/TaskDetail/TaskDetail.storyboard
@@ -10,7 +10,7 @@
         <!--Task Detail Table View Controller-->
         <scene sceneID="rYB-JD-2Ku">
             <objects>
-                <tableViewController storyboardIdentifier="TaskDetail" id="chf-4N-yUF" customClass="TaskDetailTableViewController" customModule="toDo" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="TaskDetail" id="chf-4N-yUF" customClass="TaskDetailTableViewController" customModule="To_Do" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="ydV-8f-GUw">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
