--- a/To-Do/To-Do/Screens/TaskList/TaskList.storyboard
+++ b/To-Do/To-Do/Screens/TaskList/TaskList.storyboard
@@ -62,7 +62,7 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EmptyList" translatesAutoresizingMaskIntoConstraints="NO" id="6mr-V9-Afc">
-                                <rect key="frame" x="0.0" y="184" width="414" height="578"/>
+                                <rect key="frame" x="0.0" y="239" width="414" height="523"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Görev listeniz boş." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9X8-CS-FMM">
                                 <rect key="frame" x="10" y="205.5" width="394" height="20.5"/>
@@ -77,9 +77,9 @@
                             <constraint firstItem="ARe-oD-qwg" firstAttribute="top" secondItem="qIc-Ch-j5N" secondAttribute="bottom" constant="30" id="03r-0e-P8E"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="9X8-CS-FMM" secondAttribute="trailing" constant="10" id="2OW-t7-aaD"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Tg8-JH-9sc" secondAttribute="trailing" constant="48" id="2hB-ze-j8f"/>
-                            <constraint firstItem="6mr-V9-Afc" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="96" id="9ut-oT-63Z"/>
+                            <constraint firstItem="6mr-V9-Afc" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="151" id="9ut-oT-63Z"/>
                             <constraint firstItem="Tg8-JH-9sc" firstAttribute="top" secondItem="6mr-V9-Afc" secondAttribute="bottom" constant="30" id="CoY-zz-yqi"/>
-                            <constraint firstItem="6mr-V9-Afc" firstAttribute="top" secondItem="9X8-CS-FMM" secondAttribute="bottom" constant="-42" id="De8-dL-kJW"/>
+                            <constraint firstItem="6mr-V9-Afc" firstAttribute="top" secondItem="9X8-CS-FMM" secondAttribute="bottom" constant="13" id="De8-dL-kJW"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="Tg8-JH-9sc" secondAttribute="bottom" constant="39" id="Grk-SB-YA8"/>
                             <constraint firstItem="Tg8-JH-9sc" firstAttribute="top" secondItem="qIc-Ch-j5N" secondAttribute="bottom" constant="30" id="H4k-Mj-ZKi"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="ARe-oD-qwg" secondAttribute="bottom" constant="39" id="R3e-H7-qSV"/>
@@ -124,7 +124,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="EmptyList" width="888" height="792"/>
+        <image name="EmptyList" width="305.43722534179688" height="513.18865966796875"/>
         <image name="sort-svgrepo-com (3)" width="24" height="24"/>
         <image name="text-add" width="24" height="24"/>
         <systemColor name="systemBackgroundColor">
